--- a/job appl/210071601141.html
+++ b/job appl/210071601141.html
@@ -81,8 +81,8 @@
             <label for="skills">Skills:</label>
             <select id="skills" name="skills" required>
                 <option value="" disabled selected>Select a skill</option>
-                <option value="web_dev">Web Development</option>
-                <option value="design">Graphic Design</option>
+                <option value="web_development">Web Development</option>
+                <option value="Graphic_design">Graphic Design</option>
                 <option value="marketing">Marketing</option>
                 <option value="other">Other</option>
             </select>
