--- a/job appl/210071601141.html
+++ b/job appl/210071601141.html
@@ -26,7 +26,7 @@
             font-weight: bold;
         }
 
-        input[type="text"], input[type="email"], textarea, select {
+        input[type="text"], input[type="email"], textarea, select,input[type="tel"] {
             width: 580px;
             padding: 10px;
             margin: 8px 0;
@@ -57,8 +57,8 @@
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="phone">Phone Number:</label>
-            <input type="text" id="phone" name="phone" required>
+            <label for="phone">Phone Number (10 digits):</label>
+            <input type="tel" id="phone" name="phone" required pattern="[0-9]{10}" minlength="10" maxlength="10">
 
             <label for="position">Position Applied For:</label>
             <select id="position" name="position" required>
