--- a/job appl/210071601141.html
+++ b/job appl/210071601141.html
@@ -4,8 +4,9 @@
     <title>Job Application Form</title>
     <style>
         body {
+            
             font-family: Arial, sans-serif;
-            background-color: #f0f0f0;
+            background-color: #ef7e41;
             margin: 0;
             padding: 0;
         }
@@ -13,9 +14,11 @@
         #container {
             width: 600px;
             margin: 20px auto;
-            background-color: white;
+            background-color: rgb(175, 229, 223);
             padding: 20px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border: 2px solid rgb(2, 2, 2);
+            border-radius: 20px;
         }
 
         h2 {
@@ -32,6 +35,7 @@
             margin: 8px 0;
             border: 1px solid #ccc;
             border-radius: 4px;
+            border: 1px solid #818080;
         }
         #butn {
             background-color: #007BFF;
@@ -44,6 +48,9 @@
 
         #butn:hover {
             background-color: #0056b3;
+        }
+        .center-button {
+            text-align: center;
         }
     </style>
 </head>
@@ -87,7 +94,9 @@
                 <option value="other">Other</option>
             </select>
 
-            <button id="butn">Submit Application</button>
+            <div class="center-button">
+                <button id="butn">Submit Application</button>
+            </div>
         </form>
     </div>
     <script type="text/javascript" src="index.js"></script>
