--- a/job appl/210071601141.html
+++ b/job appl/210071601141.html
@@ -38,7 +38,7 @@
             border: 1px solid #818080;
         }
         #butn {
-            background-color: #007BFF;
+            background-color: #2e7917;
             color: white;
             padding: 10px 20px;
             border: none;
