--- a/timetable/210071601141.html
+++ b/timetable/210071601141.html
@@ -1,127 +1,119 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <title>Mohammed Fouzan P S</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: rgb(246, 223, 193);
-        }
-
-        header {
-            background-color: #007BFF;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-
-        nav {
-            background-color: #165aa3;
-            text-align: center;
-            padding: 10px;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            margin: 10px;
-        }
-
-        main {
-            padding: 20px;
-        }
-
-        section {
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background-color: #165aa3;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-        }
-    </style>
-</head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<body>
-    <header>
-        <h1>Mohammed Fouzan</h1>
-        <p>Welcome to my personal homepage</p>
-    </header>
-
-    <nav>
-        <a href="#about">About</a>
-        <a href="#skills">Skills</a>
-        <a href="#projects">Projects</a>
-        <a href="#contact">Contact</a>
-    </nav>
-
-    <main>
-        <section id="about">
-            <h2>About Me</h2>
-            <p>
-                This is Fadhil Ahmed, a Tech enthusiast, WebPage Developer, UI/UX Designer also a Junior Developer👨‍💻.
-        <ul>
-            <li>🔭 I'm currently working on Website networking.</li>
-            <li>🌱 I'm currently learning Reacts & SQL.</li>
-            <li>⚡ Fun fact: I use dark mode over light mode.</li>
-        </ul>
-            </p>
-        </section>
-
-        <section id="skills">
-            <h2>Skills</h2>
-       
-        <h3>Frontend Skills</h3>
-            <ul>
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Figma</li>
-            </ul>
-        <br>
-        <h3>Backend Skills</h3>
-        <ul>
-                <li>Python</li>
-                <li>MySQL</li>
-                <li>Node.js</li>
-                <li>Express.js</li>
-            </ul>
-        <br>
-        <h3>Additional Skills</h3>
-        <ul>
-                <li>Video editing</li>
-                <li>Adobe photoshop</li>
-                <li>Adobe Illustrator</li>
-            </ul>
-        </section>
-
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>
-                Check out my new projects on my github below <br>
-                <h2 style="margin: 0;">↓</h2><br>
-                <a href="https://github.com/FouzanPS" style="color: black;">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16" style="margin: 0;">
-                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"></path>
-                      </svg>
-                </a>
-            </p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact</h2>
-            <p>
-                You can reach me at: 210071601141@crescent.education
-            </p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; Contact-210071601141@crescent.education. All rights reserved.</p>
-    </footer>
+<body style="font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;">
+	<h1 style="text-align: center;">CLASS TIME TABLE</h1>
+	<table border="5" style="border-color: rgb(242, 34, 15);" cellspacing="0" align="center">
+		<tr>
+			<td align="center" height="50"
+				width="100"><br>
+				<b>Day/Period</b></br>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b>I<br>9:00-9:50</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b>II<br>9:50-10:40</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b><br>10:40-11:00</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b>III<br>11:00-11:50</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b>IV<br>11:50-12:40</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b><br>12:40-1:40</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b>V<br>1:40-2:30</b>
+			</td>
+			<td align="center" height="50"
+				width="100">
+				<b>VI<br>2:30-3:20</b>
+			</td>
+            <td align="center" height="50"
+				width="100">
+				<b>VII<br>3:20-4:10</b>
+			</td>
+		</tr>
+		<tr>
+			<td align="center" height="50">
+				<b>Monday</b></td>
+			<td align="center" height="50">AI&ML</td>
+			<td align="center" height="50">Network Security</td>
+            <td rowspan="6" align="center" height="50">
+				<h2>B<br>R<br>E<br>A<br>K</h2>
+			</td>
+			<td align="center" height="50">Theroy of Computaion</td>
+			<td align="center" height="50">Data Mining</td>
+            <td rowspan="6" align="center" height="50">
+				<h2>L<br>U<br>N<br>C<br>H</h2>
+			</td>
+            <td colspan="3" align="center"
+				height="50">Web Programming Lab</td>
+		</tr>
+		<tr>
+			<td align="center" height="50">
+				<b>Tuesday</b>
+			</td>
+			<td colspan="2" align="center"
+				height="50">Data Structure
+			</td>
+			<td align="center" height="50">AI&ML</td>
+			<td align="center" height="50">Theroy of Computaion</td>
+			<td align="center" height="50">Network Security</td>
+			<td colspan="2" align="center"
+				height="50">Digital System
+			</td>
+		</tr>
+		<tr>
+			<td align="center" height="50">
+				<b>Wednesday</b>
+			</td>
+			<td align="center" height="50">Network Security</td>
+			<td align="center" height="50">Data Mining</td>
+			<td align="center" height="50">AI&ML</td>
+			<td align="center" height="50">Theroy of Computaion</td>
+			<td colspan="2" align="center"
+				height="50">LIBRARY
+			</td>
+            <td align="center" height="50">Open Source</td>
+		</tr>
+		<tr>
+			<td align="center" height="50">
+				<b>Thursday</b>
+			</td>
+            <td colspan="2" align="center"
+				height="50">AI&ML LAB
+			</td>
+            <td align="center" height="50">Data Mining</td>
+			<td align="center" height="50">AI&ML</td>
+			<td align="center" height="50">Theroy of Computaion</td>
+			<td align="center" height="50">Network Security</td>
+            <td align="center" height="50">Algorithm</td>
+		</tr>
+		<tr>
+			<td align="center" height="50">
+				<b>Friday</b>
+			</td>
+			<td colspan="2" align="center"
+				height="50">Networks Lab
+			</td>
+			<td align="center" height="50">Network Security</td>
+			<td align="center" height="50">Theroy of Computaion</td>
+			<td align="center" height="50">AI&ML</td>
+			<td align="center" height="50">Data Mining</td>
+            <td align="center" height="50">Seminar</td>
+		</tr>
+	</table>
 </body>
 </html>
