--- a/profile/210071601141.html
+++ b/profile/210071601141.html
@@ -63,7 +63,7 @@
         <section id="about">
             <h2>About Me</h2>
             <p>
-                This is Fadhil Ahmed, a Tech enthusiast, WebPage Developer, UI/UX Designer also a Junior Developer👨‍💻.
+                This is Mohammed Fouzan, a Tech enthusiast, WebPage Developer, UI/UX Designer also a Junior Developer👨‍💻.
         <ul>
             <li>🔭 I'm currently working on Website networking.</li>
             <li>🌱 I'm currently learning Reacts & SQL.</li>
