--- a/basic html/210071601141.html
+++ b/basic html/210071601141.html
@@ -29,7 +29,7 @@
 
 Hic dolor galisum eos modi quod aut enim fuga ut omnis iste eos voluptates consectetur?<span style="font-weight: bold;">br tag applied here</span> <br>Qui iure eius ex quae voluptatem ad earum voluptas et numquam iste At voluptas assumenda et illum veritatis est libero voluptas. Est explicabo repellat non quasi dolores nam quis dolor a facere consectetur ad porro vitae qui totam voluptas. Et odit molestias est maiores commodi et assumenda quisquam aut reprehenderit rerum qui delectus quae.
 
-Est iste voluptatem </p><span style="font-weight: bold;">hr tag applied here</span><hr>sed neque quas eum ipsum minima ut rerum sint aut mollitia fugit. Aut fuga maiores et corporis fugit est pariatur veritatis id numquam quis non voluptas odio. Et necessitatibus eaque rem porro reiciendis est enim aperiam. Aut culpa omnis et nisi sint aut iure veritatis.
+Est iste voluptatem </p><span style="font-weight: bold;">hr tag applied here(using span)</span><hr>sed neque quas eum ipsum minima ut rerum sint aut mollitia fugit. Aut fuga maiores et corporis fugit est pariatur veritatis id numquam quis non voluptas odio. Et necessitatibus eaque rem porro reiciendis est enim aperiam. Aut culpa omnis et nisi sint aut iure veritatis.
 
 </body>
 </html>
