--- a/profile/210071601141.html
+++ b/profile/210071601141.html
@@ -43,6 +43,22 @@
             text-align: center;
             padding: 10px;
         }
+        img{
+            height: 150px;
+            float: right;
+            border-radius: 75px;
+            border: 1px solid black;
+            margin-right: 50px;
+            margin-left: 50px;
+        }
+        @media screen and (max-width: 600px) {
+            img{
+                height: 150px;
+                float: right;
+                border-radius: 60px;
+                border: 1px solid black 
+            }
+        }
     </style>
 </head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
@@ -61,6 +77,7 @@
 
     <main>
         <section id="about">
+            <img src="../basic html/Screenshot 2023-11-02 at 9.40.19 PM.png" />
             <h2>About Me</h2>
             <p>
                 This is Mohammed Fouzan, a Tech enthusiast, WebPage Developer, UI/UX Designer also a Junior Developer👨‍💻.
